css/site.css
.container {
	padding-left: 125px;
	padding-right: 125px;
}

.jumbotron {
	padding: 0;
	margin-top: 0;
	margin-bottom: 0;
	overflow: hidden;
}

.jumbotron p {
	font-size: 14px;
}

.header {
	background-color: #61c0e7;
}

.spacer-header {
	margin-top: 50px;
	margin-bottom: -200px;
}

.spacer-after {
	margin-bottom: 100px;
}

.spacer-content {
	margin-top: 100px;
}

.heading-white {
	color: #fff;
}

.tablet {
	position: absolute;
	right: -200px;
	top: 0;
}

.logo-box {
	width: 90px;
	height: 90px;
	background-color: #fff;
	padding-left: 30px;
	padding-top: 23px;
	-webkit-box-shadow: 10px 10px 0px 0px rgba(60,158,207,1);
	-moz-box-shadow: 10px 10px 0px 0px rgba(60,158,207,1);
	box-shadow: 10px 10px 0px 0px rgba(60,158,207,1);
}

.mobile-btn {
	margin-top: 50%;
}

.mobile-container {
	margin-top: 50%;

}

blockquote {
	border-left: 5px solid #708ab2;
}

.longwind {
	background-color: #f4f4f4;
}

.dog {
	background-color: #fff;
}

.likesee {
	background-color: #13c4af;
  height: 300px;
  color: white;
  text-align: center;
  vertical-align: center;
}

.footer p {
  background-position: white;
  text-align: center;
}

a {
	padding: 15px 40px 15px 40px;
	border: 2px solid #fff;
	text-transform: uppercase;
	color: #fff;
}

.say-hello {
	border: 2px solid #428d73;
	color: #428d73;
}

.icon {
	margin-left: 5px;
	margin-bottom: 3px;
}

.social {
  
}

.beer {
  color: white;
  border-style: solid;
  border-color: white;
  margin: auto;
}

